# linetrace_sim

./: CMakeLists.txt  README.md
include/: line.h  matplotlibcpp.h  motor.h  noised_motor.h  noised_sensor.h  robot.h  sensor.h  structs.h  timer.h  world.h
src/: main.cpp
